# ComfyUI_CGAnimittaTools

./: BlackBorderCrop_node.py  Blender_Bridge.py  DesaturateNode.py  FrameExtractionNode.py  List_Extractor.py  List_Subfolders.py  PromptNegative_Selector.py  README.md  Text_Reader.py  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
BlenderAddons/: blender-comfyuiClient.py
workflows/: Batch translation of txt files.json  Batch translation of txt.json  Krita-blender-comfyui bridge-Demo.json
